--- a/osfamilydocker.yaml
+++ b/osfamilydocker.yaml
@@ -2,6 +2,8 @@
 - name: Install Docker based on OS family
   hosts: all
   become: true
+  vars_files:
+    - vault.yml
   vars:
     docker_packages_redhat:
       - docker-ce
